--- a/.env
+++ b/.env
@@ -14,8 +14,8 @@ CLOUDINARY_API_KEY = "467931486367837"
 CLOUDINARY_SECRET_KEY = PVPEcaNH4C8gknBLQ2xgMyKEXMk
 
 # Razorpay Payment Integration
-RAZORPAY_KEY_ID = "rzp_test_7hATzItsHfXynn"
-RAZORPAY_KEY_SECRET = "kdaSCRzouaIh7fjjoShbfgBf"
+RAZORPAY_KEY_ID = "rzp_live_9gHVnkuKV1XksW"
+RAZORPAY_KEY_SECRET = "fLZ88BT6CYpDYkcXv0UH1Hs6"
 
 # Stripe Payment Integration
 STRIPE_SECRET_KEY="------ Stripe Secret Key here ------"
